<resources>
    <string name="app_name">Cohort</string>

    <string name="facebook_app_id">182483432375774</string>
    <string name="fb_login_protocol_scheme">fb182483432375774</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up_login_page">Not a member yet? Register here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_logout">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_new">New</string>
    <string name="title_petitions">Petitions</string>
    <string name="title_news">News</string>
    <string name="title_victories">Victories</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="button_login_with_email">Login with email</string>
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>
    <string name="hint_name">Name</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="edit_account_settings">Edit Account Settings</string>
    <string name="petition_name">Petition Name</string>
    <string name="petition_title_desc">Tell us what you are upto</string>
    <string name="petition_description">Petition Description</string>
    <string name="petition_description_desc">Tell us a little bit about your project</string>
    <string name="target_supporters">Target Supporters</string>
    <string name="target_supporters_desc">Tell us about target goal</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_format">dd/mm/yy</string>
    <string name="add_petition">Add Petition</string>
    <string name="add_petition_announcement">Add Announcement</string>
    <string name="petition_announcement_name">Announcement Title</string>
    <string name="petition_announcement_title_desc">Tell us what something new about this petition</string>
    <string name="petition_announcement_description">Announcement Details</string>
    <string name="petition_announcement_description_desc">Tell us a little bit about your Announcement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_petition">Sign this petition</string>
    <string name="image_description">Image Description</string>
    <string name="toolbar_title_account_setup">Account Setup</string>
    <string name="toolbar_title_cohort">Cohort</string>
    <string name="toolbar_title_new_announcement">New Announcement</string>
    <string name="toolbar_title_new_petition">New Petition</string>

    <!--Debug SHA1: DC:15:07:D6:37:E9:D3:CE:C2:C8:7C:A8:AD:12:65:A9:61:B0:A0:BE-->

</resources>
