<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_petitions"
        android:icon="@drawable/ic_discover_grey"
        android:title="@string/title_petitions" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_announcement_grey"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_add_new"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        android:title="@string/title_new" />

    <item
        android:id="@+id/navigation_victories"
        android:icon="@drawable/ic_victory_grey"
        android:title="@string/title_victories" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_grey"
        android:title="@string/title_profile" />

</menu>
